--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-locallibrary",
   "version": "0.0.0",
+  "engines": {
+    "node": "6.11.4"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -9,10 +12,12 @@
   "dependencies": {
     "async": "^2.5.0",
     "body-parser": "~1.18.2",
+    "compression": "^1.7.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-validator": "^4.2.1",
+    "helmet": "^3.9.0",
     "moment": "^2.19.1",
     "mongoose": "^4.12.2",
     "morgan": "~1.9.0",
